[package]
name = "mujs"
description = "rust bindings for MuJS javascript library"
version = "0.0.3"
authors = ["Henrik Andersson <henrik.4e@gmail.com>"]
repository = "https://github.com/hean01/mujs-rs.git"
license = "GPL-3.0"
keywords = ["FFI", "JavaScript", "ECMAScript", "ES5"]
categories = ["external-ffi-bindings"]
links = "mujs"
build = "build.rs"

[dependencies]
libc = "0.2.0"
bitflags = "0.9"

[build-dependencies]
gcc = "0.3"
